infra/k8s/eks/certificate/apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: apache-test
   labels:
      app: apache
spec:
   replicas: 1
   selector:
      matchLabels:
         app: apache
   template:
      metadata:
         labels:
            app: apache
      spec:
         containers:
            - name: apache
              image: eriktortarod/docker-frontend:latest
              ports:
                 - containerPort: 80
              resources:
                 limits:
                    cpu: "0.5"
                    memory: "512Mi"
                 requests:
                    cpu: "0.2"
                    memory: "256Mi"
